Spicing up the hello3.html document.

--- a/hello3.html
+++ b/hello3.html
@@ -5,6 +5,8 @@
     <title> Sean's Webpage! </title>
   </head>
   <body>
-    IslandLife will be incredible. It really will. Hello hello hello.
+    <h1> Island Life takes the Caribbean by storm! </h1>
+    <br>
+     IslandLife is a unique initative created by Caribbean founders Gerard Porter and Sean Francois.
   </body>
 </html>
