Added lists and additional details to the IslandLife website

--- a/hello3.html
+++ b/hello3.html
@@ -8,5 +8,25 @@
     <h1> Island Life takes the Caribbean by storm! </h1>
     <br>
      IslandLife is a unique initative created by Caribbean founders Gerard Porter and Sean Francois.
+    <br>
+    We set ourselves apart from the competition the following ways:
+    <br>
+    <ul>
+      <li>All-in-one website for an event's venue, catering, photography music etc. </li>
+      <li>A meritocratic review system where customers are able to leave ratings under the profiles of those who utilize our services.</li>
+      <li>A grab-and-go event planner where based on parameters selected by users, a package specific to our consumers' needs is created immediately.</li>
+    </ul>
+    <br>
+    <br>
+    The planned phases of our business are as follows:
+      <ol>
+        <li>Creating and registering the company in St. Lucia.</li>
+        <li>Obtaining a 40k XCD startup grant from SVG. </li>
+        <li>Extensive marketing to attract customers and business partners.</li>
+        <li>???</li>
+        <li>Profit.</li>
+      </ol>
+
+
   </body>
 </html>
