Gramattical Corrections to IslandLife website

--- a/hello3.html
+++ b/hello3.html
@@ -9,7 +9,8 @@
     <br>
      IslandLife is a unique initative created by Caribbean founders Gerard Porter and Sean Francois.
     <br>
-    We set ourselves apart from the competition the following ways:
+    <br>
+     IslandLife sets itself apart from the competition the following ways:
     <br>
     <ul>
       <li>All-in-one website for an event's venue, catering, photography music etc. </li>
