--- a/hello3.html
+++ b/hello3.html
@@ -27,7 +27,9 @@
         <li>???</li>
         <li>Profit.</li>
       </ol>
-
+      <br>
+      <br>
+      <img src="fete.jpg">
 
   </body>
 </html>
