--- a/il2.html
+++ b/il2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <title>ISLANDLIFE</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body, html {
@@ -56,6 +57,6 @@ body, html {
   <div class="bg-image"></div>
   <div class="bg-text">
     <h1 style="font-size:50px">I S L A N D L I F E</h1>
-    <p> Gerard Porter and Sean Francois</p></div>
+
   </body>
 </html>
