Islandlife text scaling

--- a/il2.html
+++ b/il2.html
@@ -5,11 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body, html {
+
     height: 100%;
     margin: 0;
     font-family: Arial, Helventica, sans-serif;
   }
-
+  h1 {
+    font-size: 6.0vw
+  }
    {
     box-sizing: border-box;
    }
@@ -56,7 +59,7 @@ body, html {
 
   <div class="bg-image"></div>
   <div class="bg-text">
-    <h1 style="font-size:50px">I S L A N D L I F E</h1>
-
+    <h1>I S L A N D L I F E</h1>
+  </div>
   </body>
 </html>
