--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Test</title>
   </head>
   <body>
-    IslandLife is great. 
+    IslandLife is great. It's time to experiment with branching.
   </body>
 </html>
