--- a/link.html
+++ b/link.html
@@ -5,6 +5,24 @@
     <title>Sean's Webpage</title>
   </head>
   <body>
-    <a href="il2.html"> IslandLife Webpage </a>
+    <h2> Table of Contents </h2>
+    <ul>
+      <li><a href="#section1">Section 1</a></li>
+      <li><a href="#section2">Section 2</a></li>
+      <li><a href="#section3">Section 3</a></li>
+    </ul>
+
+    <h2 id="section1"> Why invest in IslandLife?</h2>
+    <p>
+      We'll make money.
+    </p>
+    <h2 id="section2"> What does your webpage look like?</h2>
+    <p>
+      <a href="il2.html"> IslandLife Webpage </a>
+    </p>
+    <h2 id="section"> How large will your company be?</h2>
+    <p>
+      As large as <a href="https://www.google.com/"> this one. </a>
+    </p>
   </body>
 </html>
